Fix hero text on Firefox (& iOS?)

--- a/ct-hanggliding.org/src/Components/Hero.scss
+++ b/ct-hanggliding.org/src/Components/Hero.scss
@@ -4,7 +4,6 @@
   height: 70vh;
   min-height: 400px;
   overflow: hidden;
-  display: flex;
   background-size: cover;
   background-position: center;
   &.hero_chga-4th {
@@ -160,18 +159,17 @@
     }
   }
 
-  // @media (prefers-color-scheme: dark) {
-  //   filter: brightness(65%);
-  // }
-
   .hero-text-wrap {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-inline-start: 1.5em;
+    padding-inline-start: 0.5em;
+    width: 10vw;
+    min-width: 100px;
+    height: 100%;
   }
   .hero-text {
-    opacity: 60%;
+    opacity: 40%;
     color: hsl(var(--clr-white));
     writing-mode: vertical-lr;
     transform: rotate(180deg);
@@ -189,12 +187,12 @@
     padding-inline: 0.5em;
     margin-block-start: 0.15em;
     border-radius: var(--radius-3);
-    background: linear-gradient(hsl(var(--clr-sky)), hsl(var(--clr-deep-sky)));
+    // background: linear-gradient(hsl(var(--clr-sky)), hsl(var(--clr-deep-sky)));
 
     @media (prefers-color-scheme: dark) {
       opacity: 70%;
       background: unset;
-      background-color: hsl(var(--clr-dark-forest));
+      // background-color: hsl(var(--clr-dark-forest));
     }
   }
 
@@ -202,6 +200,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 10vw;
+    min-width: 100px;
+    height: 100%;
     svg {
       height: 80%;
     }
